Tab images blurry issue resolved. Pointer cursor now appears when you hover over tabs

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -1,179 +1,183 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #eef2f6;
-    font-size: 14px;
-    font-family: -apple-system, "Inter", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", "Open Sans", sans-serif;
+  background: #eef2f6;
+  font-size: 14px;
+  font-family: -apple-system, "Inter", "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Helvetica Neue", "Open Sans", sans-serif;
 }
 
 .container {
-    overflow: hidden;
-    user-select: none;
-    max-width: 60px;
+  overflow: hidden;
+  user-select: none;
+  max-width: 60px;
 }
 
 .tabs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
 }
 
 .tab,
 .plus-icon {
-    width: 40px;
-    height: 40px;
-    color: #fff;
-    background-color: #3E3939;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  background-color: #3e3939;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  cursor: pointer;
 }
 
 .plus-icon {
-    background-color: transparent;
-    border: 2px solid #000;
-    margin-top: 10px;
-    font-size: 20px;
-    color: #000;
+  background-color: transparent;
+  border: 2px solid #000;
+  margin-top: 10px;
+  font-size: 20px;
+  color: #000;
 }
 
-.tab>svg.icon-loading {
-    display: inline;
-    flex: none;
-    width: 1.5em;
-    height: 1.5em;
+.tab > svg.icon-loading {
+  display: inline;
+  flex: none;
+  width: 1.5em;
+  height: 1.5em;
 }
 
 .tab:first-child {
-    border-left: none;
+  border-left: none;
 }
 
 .tab {
-    background-color: black;
-    opacity: 0.5;
-
+  background-color: black;
+  opacity: 0.5;
 }
 
 .tab.active {
-    background-color: #fff;
-    opacity: 1;
-    color: #3E3939;
-    border: 3px solid rgb(43, 25, 174);
+  background-color: #fff;
+  opacity: 1;
+  color: #3e3939;
+  border: 3px solid rgb(43, 25, 174);
 }
 
-
 .title {
-    flex-grow: 1;
-    display: flex;
-    margin: 0 5px 0 10px;
-    overflow: hidden;
+  flex-grow: 1;
+  display: flex;
+  margin: 0 5px 0 10px;
+  overflow: hidden;
 }
 
 .title-content {
-    flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .close {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-    margin-top: 2px;
-    border-radius: 100%;
-    font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  margin-top: 2px;
+  border-radius: 100%;
+  font-size: 10px;
 }
 
 .close:hover {
-    background: #ddd;
+  background: #ddd;
 }
 
 .bars {
-    padding: 10px 18px;
-    background: #fff;
+  padding: 10px 18px;
+  background: #fff;
 }
 
 .bars .address {
-    width: 100%;
-    height: 32px;
-    padding: 4px 11px;
-    border: 1px solid #d9d9d9;
-    border-radius: 4px;
-    background: #eceff2;
-    outline: none;
-    font-size: 12px;
+  width: 100%;
+  height: 32px;
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  background: #eceff2;
+  outline: none;
+  font-size: 12px;
 }
 
 .bars .address:focus {
-    background: #fff;
+  background: #fff;
 }
 
 .bar {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .actions {
-    flex-shrink: 0;
-    display: flex;
-    justify-content: space-evenly;
-    width: 118px;
-    margin-right: 18px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: space-evenly;
+  width: 118px;
+  margin-right: 18px;
 }
 
 .action {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 36px;
-    height: 36px;
-    border-radius: 100%;
-    color: #333;
-    font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 100%;
+  color: #333;
+  font-size: 16px;
 }
 
 .action.disabled {
-    color: #ccc;
+  color: #ccc;
 }
 
 .action:not(.disabled):hover {
-    background: #eee;
+  background: #eee;
 }
 
 .ip-title-container {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    overflow: hidden;
-    text-align: center;
-    height: 37px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+  height: 37px;
 }
 
-.ip-title-container>a.ip-title {
-    display: inline;
-    border: 1px solid #03A9F4;
-    background-color: #B3E5FC;
-    color: #03A9F4;
-    padding: 5px 10px;
-    font-size: large;
-    border-radius: 5px;
-    user-select: none;
+.ip-title-container > a.ip-title {
+  display: inline;
+  border: 1px solid #03a9f4;
+  background-color: #b3e5fc;
+  color: #03a9f4;
+  padding: 5px 10px;
+  font-size: large;
+  border-radius: 5px;
+  user-select: none;
 }
 
-.tabs:hover+.ip-title-container {
-    opacity: 0.3;
-    pointer-events: none;
+.tabs:hover + .ip-title-container {
+  opacity: 0.3;
+  pointer-events: none;
 }
 
 .ip-title-container:hover {
-    opacity: 0.3;
-    pointer-events: none;
+  opacity: 0.3;
+  pointer-events: none;
+}
+
+.tab-image {
+  padding: 0.25rem;
 }
